# mandy

./: CMakeLists.txt  README.md  mandy.cpp  mandy.h
src/: Application.cpp  Application.hpp  Canvas.cpp  Canvas.hpp  ComplexPlane.hpp  FpsCounter.cpp  FpsCounter.hpp  ScreenshotSaver.cpp  ScreenshotSaver.hpp  Widget.hpp  main.cpp  utils.hpp
src/fractals/: Mandelbrot.cpp  Mandelbrot.hpp
src/services/: StatsService.cpp  StatsService.hpp
src/widgets/: Canvas.cpp  Canvas.hpp  FpsCounter.cpp  FpsCounter.hpp  StatsPanel.cpp  StatsPanel.hpp
